fix text shift to the left

--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,3 @@ body {
 .footerStyle {
   margin-top: 10rem;
 }
-
-.container {
-  margin: 2% 0 2% 0;
-}
